# participant-app-client

./: Cargo.toml  README.md  participant-app-client.conf
.github/workflows/: release.yaml
src/: generate_body.rs  httpreq.rs  lib.rs  main.rs  participant-app.conf  userdata.rs
src/generate_body/: header.rs  mac.rs  user.rs
src/httpreq/: get.rs  put.rs  request.rs
src/userdata/: input_yaml.rs
